# Dean

./: .gitignore  .pre-commit-config.yaml  Brava-Skin-Ad-sets-Oct-16-2025-Oct-22-2025-Compared_to-Oct-9-2025-Oct-15-2025.csv  Brava-Skin-Ad-sets-Oct-9-2025-Oct-22-2025.csv  Brava-Skin-Ads-Oct-9-2025-Oct-22-2025.csv  DEAN_COMPLETE_GUIDE.md  DEAN_SCHEDULING.md  GITHUB_ACTIONS_SETUP.md  README.md  README_SYNC.md  auto-sync-simple.bat  auto-sync-test.txt  auto-sync.bat  auto-sync.ps1  comprehensive_supabase_test.py  debug_schema.py  discover_schemas.py  fix_model_name_column.sql  fix_supabase_code.py  historical_data_rows.csv  quick_supabase_test.py  requirements.txt  run-dean-automation.bat  run-dean-stages.bat  run-sync.bat  schedule-dean.bat  setup-git-sync.bat  simple-sync.ps1  start-sync.bat  supabase_minimal_fix.sql  supabase_numeric_overflow_fix.sql  supabase_safe_numeric_fix.sql  sync.ps1  test-sync.txt  test_dean_fixes_local.py  test_supabase_storage.py  test_ultra_minimal.py  time_series_data_rows.csv
dean/: .gitignore  24_7_DEPLOYMENT_GUIDE.md  ADVANCED_FEATURES.md  BACKGROUND_MONITORING.md  CREATIVE_INTELLIGENCE_GUIDE.md  DEPLOYMENT_READY.md  DIGITALOCEAN_DEPLOYMENT.md  ENVIRONMENT_SETUP.md  FFMPEG_SPELLING_ISSUES.md  MACOS_SETUP.md  ML_IMPROVEMENTS_COMPLETED.md  ML_IMPROVEMENTS_PLAN.md  ML_SETUP_GUIDE.md  ML_SYSTEM_READY_SUMMARY.md  ML_SYSTEM_STATUS.md  Makefile  PRODUCTION_HOTFIX_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  REAL_DATA_TEST_GUIDE.md  SETUP_REAL_DATA_TESTING.md  apply_sql_improvements.py  check_columns.sql  compare_systems.py  creative_intelligence_schema.sql  creative_requirements.txt  fix_ml_models_constraint.sql  pyproject.toml  rate_limit_config.env  requirements.txt  setup.py  setup_supabase.py  start_background.py  start_ml_system.sh  supabase_add_fatigue_analysis.sql  supabase_add_fatigue_analysis_only.sql  (+9 more)
(+162 files in other folders)
